# mandelbulb

./: Cargo.toml  README.md  main.py  pyproject.toml
src/: color.rs  lib.rs  renderer.rs  sdf.rs  vec3.rs
tests/: test_main.py
