[build-system]
requires = ["maturin>=1.13.3"]
build-backend = "maturin"

[project]
name = "mandelbulb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "maturin>=1.13.3",
    "pillow>=12.2.0",
    "typer>=0.26.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
